# auto-dataset-encoder

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: categorical_encoder.py  datetime_encoder.py  encoder.py  numerical_encoder.py
src/dataset_encoder/: __init__.py  __version__.py  categorical_encoder.py  circular_encoder.py  datetime_encoder.py  encoder.py  numerical_encoder.py
