[metadata]
name = dataset_encoder
description = Make your preprocessing stage automated!
author = dmforit
license=Apache License 2.0
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
version=1.0.0

[options]
packages = dataset_encoder
install_requires = 
    category-encoders>=2.6.3
    numpy>=1.26.4
    pandas>=2.0
    scikit-learn>=1.5.0
    scipy>=1.13.1
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
