[metadata]
name = dataset_encoder
description = Make your preprocessing stage automated!
author = dmforit
license=Apache License 2.0
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
version=1.0.0

[options]
packages = dataset_encoder
install_requires = 
    category-encoders>=2.6.3
    numpy>=1.25.2
    pandas>=2.0
    scikit-learn>=1.2.2
    scipy>=1.11.4
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
